--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 <body>
   <main class="conteudo-principal">
-    <div class="grafismo-azul"></div>
+    <div class="grafismo-roxo"></div>
     <section class="adicionar-produto">
       <h1 class="titulo">
-        Carrinho de <span class="texto-azul">compras</span>
+        Carrinho de <span class="texto-roxo">compras</span>
       </h1>
 
       <form class="formulario">
         <label class="campo-grupo">
-          <span class="texto-medio-azul">Produto</span>
+          <span class="texto-medio-roxo">Produto</span>
           <select class="produto-input" name="produto" id="produto">
             <option value="Fone de ouvido - R$100">Fones de ouvido - R$100</option>
             <option value="Celular - R$1400">Celular - R$1400</option>
@@ -35,7 +35,7 @@
 
         <section class="parte-inferior">
           <label class="campo-grupo">
-            <span class="texto-medio-azul">Qtde.</span>
+            <span class="texto-medio-roxo">Qtde.</span>
             <input class="quantidade-input" id="quantidade" type="number" placeholder="100">
           </label>
 
@@ -57,14 +57,14 @@
 
       <section class="carrinho__produtos" id="lista-produtos">
         <section class="carrinho__produtos__produto">
-          <span class="texto-azul"></span><span class="texto-azul"></span>
+          <span class="texto-roxo"></span><span class="texto-roxo"></span>
         </section>
       </section>
 
       <div class="divisoria"></div>
 
       <p class="carrinho__total">
-        Total: <span class="texto-azul" id="valor-total"></span>
+        Total: <span class="texto-roxo" id="valor-total"></span>
       </p>
     </section>
   </main>
